...
                },
                navigationIcon = {
                    RoundedIconButton(
                        icon = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = cdNavigateBackStr,
                        onClick = onNavigateBack,
                        modifier = Modifier.testTag("navigate_back_button"),
                    )
                },
                actions = {
                    RoundedIconButton(
                        icon = Icons.Filled.Menu,
                        contentDescription = cdOpenDrawerStr,
...
